"display: table" for .cg-wrap (maybe fixes #7435)

--- a/ui/common/css/component/_board.scss
+++ b/ui/common/css/component/_board.scss
@@ -10,6 +10,11 @@
   }
 }
 
+.cg-wrap {
+  display: table; // part of hack to round to full pixel size in chrome
+}
+
 .mini-board, .mini-game .cg-wrap {
   @extend %square;
+  display: table;
 }
